--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.116.1",
+    "python-dotenv>=1.1.1",
     "uvicorn[standard]>=0.35.0",
+]
+
+[tool.uv.workspace]
+members = [
+    "routes",
 ]
