--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiofiles>=24.1.0",
     "fastapi>=0.116.1",
+    "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.35.0",
 ]
 
 [tool.uv.workspace]
 members = [
     "routes",
+    "src/controllers",
+    "src/models",
 ]
