--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "fastapi>=0.116.1",
     "langchain>=0.3.27",
+    "langchain-community>=0.3.27",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "pymupdf>=1.26.3",
