--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
+    "motor>=3.7.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "pymupdf>=1.26.3",
