adding DB schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "motor>=3.7.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pymongo>=4.14.1",
     "pymupdf>=1.26.3",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
