--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,21 @@
 services:
-    mongodb:
-        image: mongo:8.0.13-noble
-        container_name: mongodb
-        ports:
-          - "27007:27017"
-        volumes:
-          - ./mongodb:/data/db
-        networks:
-          - backend
-        restart: always
+  mongodb:
+    image: mongo:8.0.13-noble
+    container_name: mongodb
+    ports:
+      - "27007:27017"
+    volumes:
+      - mongodata:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+    networks:
+      - backend
+    restart: always
 
 networks:
   backend:
+
+volumes:
+  mongodata:
+
