--- a/src/.env
+++ b/src/.env
@@ -5,5 +5,5 @@ APP_ENV="development"
 FILE_ALLOWED_TYPES=["text/plain", "application/pdf"]
 FILE_MAX_SIZE=10
 FILE_DEFAULT_CHUNK_SIZE=512000
-MONGODB_URL="mongodb://localhost:27007"
+MONGODB_URL="mongodb://admin:admin@localhost:27007"
 MONGODB_DATABASE="mini-rag"
